2008-12-05  Jonathan Pryor  <jpryor@novell.com>

	* man/mdoc-update.1: Document new parameters such as --exceptions.

2008-12-04  Mark Probst  <mark.probst@gmail.com>

	* configure.in: Disabling the sibling call optimization doesn't
	work, so we're using -mminimal-toc.

2008-12-03  Mark Probst  <mark.probst@gmail.com>

	* configure.in: Disable sibling call optimization on PPC64 as it
	seems to trip up GCC on the build bot.

2008-11-28  Atsushi Enomoto  <atsushi@ximian.com>

	* data/mono-nunit.pc.in : add new 2.4.8 files.

2008-11-21  Jb Evain  <jbevain@novell.com>

	* scripts/Makefile.am: use only one mono-api-info pointing to the cecil one
	which is mscorlib agnostic.

2008-11-21  Zoltan Varga  <vargaz@gmail.com>

	* configure.in: Only enable AOT on linux. Fixes #447265.

2008-11-19  Jonathan Pryor  <jpryor@novell.com>

	* configure.in: Remove mono/monoburg/Makefile; fixes the build.

2008-11-14  Andreas Färber  <andreas.faerber@web.de>

	* configure.in: Add preprocessor defines for ppc(64).
	Suggested by Paolo and Mark.
	
	Contributed under MIT/X11 license.

2008-11-12  Zoltan Varga  <vargaz@gmail.com>

	* configure.in: Add an ENABLE_AOT variable to config.make, currently only
	enabled for AMD64.

2008-11-11  Zoltan Varga  <vargaz@gmail.com>

	* configure.in: Bump version to 2.3.

Mon Nov 10 17:37:08 CET 2008 Paolo Molaro <lupus@ximian.com>

	* configure.in: check for sys/user.h and struct kinfo_proc members.

2008-11-07  Bill Holmes  <billholmes54@gmail.com>

	* winconfig.h : Removing HAVE_DIRENT_H, HAVE_STDINT_H,
	  HAVE_VISIBILITY_HIDDEN, HAVE_ZLIB for the VC builds.

	Code is contributed under MIT/X11 license.

2008-11-05  Bill Holmes  <billholmes54@gmail.com>

	* configure.in : Adding a auto configure check for dirent.h.

	Code is contributed under MIT/X11 license.

2008-10-30  Jonathan Pryor  <jpryor@novell.com>

	* Makefile.am: Build `docs` after `runtime`, so that it can depend
	  upon mdoc.exe for it's operation.
