@@ -49,7 +49,11 @@ gdouble ves_icall_System_Math_Round (gdouble x) {
 }
 
 gdouble ves_icall_System_Math_Round2 (gdouble value, gint32 digits, gboolean away_from_zero) {
-	double p, int_part, dec_part;
+#if !defined (HAVE_ROUND) || !defined (HAVE_RINT)
+	double int_part, dec_part;
+#endif
+	double p;
+
 	MONO_ARCH_SAVE_REGS;
 	if (value == HUGE_VAL)
 		return HUGE_VAL;
@@ -58,6 +62,12 @@ gdouble ves_icall_System_Math_Round2 (gdouble value, gint32 digits, gboolean awa
 	if (digits == 0)
 		return ves_icall_System_Math_Round(value);
 	p = pow(10, digits);
+#if defined (HAVE_ROUND) && defined (HAVE_RINT)
+	if (away_from_zero)
+		return round (value * p) / p;
+	else
+		return rint (value * p) / p;
+#else
 	dec_part = modf (value, &int_part);
 	dec_part *= 1000000000000000ULL;
 	if (away_from_zero && dec_part > 0)
@@ -73,7 +83,8 @@ gdouble ves_icall_System_Math_Round2 (gdouble value, gint32 digits, gboolean awa
 	} else
 		dec_part = ves_icall_System_Math_Round (dec_part);
 	dec_part /= p;
-	return int_part + dec_part;
+	return ves_icall_System_Math_Round ((int_part + dec_part) * p) / p;
+#endif
 }
 
 gdouble 
